added some stylings and a script

--- a/style.css
+++ b/style.css
@@ -149,13 +149,24 @@ li {
     -o-border-radius: 8px;
 }
 
-.nav,
-.nav-list {
-    display: none;
-}
+
+/* .nav {
+    position: relative;
+    display: inline-block;
+} */
 
 .nav-list {
+    /* display: none;
+    position: absolute; */
     text-transform: uppercase;
+}
+
+.nav-list:last-child {
+    margin-top: 1em;
+}
+
+.nav-list--item {
+    margin-top: 0.3em;
 }
 
 .signup-btn {
@@ -182,6 +193,7 @@ li {
 }
 
 .hero-text-btn {
+    margin: 1em 0;
     padding: 0.25em 1.5em;
 }
 
@@ -221,8 +233,8 @@ li {
     margin-bottom: 1em;
 }
 
-.footer-links {
-    margin-top: 2em;
+.footer-links h5 {
+    margin-top: 1.5em;
 }
 
 .footer-nav-list-item {
@@ -295,7 +307,6 @@ li {
     .btn-menu-container {
         display: none;
     }
-    .nav,
     .nav-list {
         display: inline;
     }
